--- a/public_html/styles/logo.css
+++ b/public_html/styles/logo.css
@@ -3,7 +3,6 @@
 
 main > div > div.logo {
 	position: absolute;
-	justify-content: start;
 	visibility: hidden;
 	opacity: 0;
 	transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
